--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0023)http://kalynnakano.com/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Tu Ni</title>
 	  	
@@ -48,35 +47,26 @@
 			<div id="illustration"><center><img src="./Tu Ni_files/big.png"></center></div>
 			<!-- About Me -->
 			<div id="about"><div class="inner">
-				<p>Hello, world! I'm a developer and designer.</p><br><br><br>
+				<p>Hello, world! I'm an engineer in data science.</p><br><br><br>
 				<!-- Console -->
 					<div id="code">
 						<div id="console">
-							&gt; Kalyn.origin<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; "Palo Alto, CA"<br><br></span>
-							&gt; Kalyn.education<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; "University of Southern California"<br><br></span>
-							&gt; Kalyn.major<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; "Computer Science"<br><br></span>
-							&gt; Kalyn.expectedGraduation<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; "May 2014"<br><br></span>
-							&gt; Kalyn.interests<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; ["Design", "Code", "coffee", "typography", "music", "bicycles", "brunch"]<br><br></span>
-							&gt; Kalyn.workExperience.latest<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; Latest Work Experience<br>
-												 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; company: "IDEO"<br>
-												 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; role: "Digital Shop Intern"<br>
-												 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; startDate: "June 2013"<br>
-												 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; endDate: "August 2013"<br>
-							<br></span>
-							&gt; Kalyn.resume<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="http://kalynnakano.com/kalynnakano.pdf">kalynnakano.pdf</a>"<br><br></span>
-							&gt; Kalyn.thoughts<br>
+							&gt; Tu.origin<br>
+							<span class="answer">&nbsp;&nbsp;=&gt; "Berkeley, CA"<br><br></span>
+							&gt; Tu.education<br>
+							<span class="answer">&nbsp;&nbsp;=&gt; "University of California, Berkeley"<br><br></span>
+							&gt; Tu.major<br>
+							<span class="answer">&nbsp;&nbsp;=&gt; "Master of Engineering in Operations Research"<br><br></span>
+							&gt; Tu.interests<br>
+							<span class="answer">&nbsp;&nbsp;=&gt; ["Math", "Coding", "Sports", "Tee", "Music", "Environment", "Calligraphy"]<br><br></span>
+							&gt; Tu.resume<br>
+							<span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="https://github.com/nitu0317/resume/blob/master/NI_TU_Resume_Apr.pdf">Ni_Tu.pdf</a>"<br><br></span>
+							&gt; Tu.social_media<br>
 							<span class="answer">&nbsp;&nbsp;=&gt; ["<a target="_blank" href="http://www.twitter.com/kalynnakano">@kalynnakano</a>",
 								 "<a target="_blank" href="http://advancedsettings.tumblr.com/">advancedsettings.tumblr.com</a>",
 								 "<a target="_blank" href="http://www.rdio.com/people/knakano/playlists/7112262/My_Brain/">rdio</a>"]<br><br></span>
-							&gt; Kalyn.email<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="mailto:kalyn.nakano@gmail.com">kalyn.nakano@gmail.com</a>"<br><br></span>
+							&gt; Tu.email<br>
+							<span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="nitu@berkeley.edu">nitu@berkeley.edu</a>"<br><br></span>
 						</div>
 					</div>
 				</div>
