--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							&gt; Tu.major<br>
 							<span class="answer">&nbsp;&nbsp;=&gt; "Master of Engineering in Operations Research"<br><br></span>
 							&gt; Tu.interests<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; ["Math", "Coding", "Sports", "Tee", "Music", "Environment", "Calligraphy"]<br><br></span>
+							<span class="answer">&nbsp;&nbsp;=&gt; ["Math", "Coding", "Sports", "Tea", "Music", "Environment", "Calligraphy"]<br><br></span>
 							&gt; Tu.resume<br>
 							<span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="https://github.com/nitu0317/resume/blob/master/NI_TU_Resume_Apr.pdf">Ni_Tu.pdf</a>"<br><br></span>
 							&gt; Tu.social_media<br>
@@ -77,11 +77,10 @@
 				<p class="tagline">Résumé</p>
 				<!-- Résumé : Education -->
 				<p class="section-tagline" style="text-align:left;">Education</p>
-				<!-- Résumé : Education : USC -->
+				<!-- Résumé : Education : UCB -->
 				<p>
-					<a target="_blank" href="http://usc.edu/"><img class="icon" src="./Tu Ni_files/usc2.jpg"></a><b>University of Southern California</b>
-					<span class="right"><i>2010 - 2014</i></span><br><b>Computer Science, B.S.</b>
-					<span class="right"><i>Los Angeles, CA</i></span><br><br>
+					<a target="_blank" href="http://www.berkeley.edu/"><img class="icon" src="./Tu Ni_files/ucb.gif<span class="right"><i>2016 - 2017</i></span><br><b>Operations Research, M.S.</b>
+					<span class="right"><i>Berkeley, CA</i></span><br><br>
 						Relevant Coursework:<br>
 						</p><ul style="list-style:circle;">
 									<li>Fundamentals of Computer Programming</li>
