--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<p class="section-tagline" style="text-align:left;">Education</p>
 				<!-- Résumé : Education : UCB -->
 				<p>
-					<a target="_blank" href="http://www.berkeley.edu/"><img class="icon" src="./Tu Ni_files/ucb.gif<span class="right"><i>2016 - 2017</i></span><br><b>Operations Research, M.S.</b>
+					<a target="_blank" href="http://www.berkeley.edu/"><img class="icon" src="./Tu Ni_files/ucb.png<span class="right"><i>2016 - 2017</i></span><br><b>Operations Research, M.S.</b>
 					<span class="right"><i>Berkeley, CA</i></span><br><br>
 						Relevant Coursework:<br>
 						</p><ul style="list-style:circle;">
