--- a/index.html
+++ b/index.html
@@ -81,99 +81,49 @@
 				<p>
 					<a target="_blank" href="http://www.berkeley.edu/"><img class="icon" src="./Tu Ni_files/ucb.png"></a><b>University of California, Berkeley</b>
 					<span class="right"><i>2016 - 2017</i></span><br><b>Operations Research, M.S.</b>
-					<span class="right"><i>Berkeley, CA</i></span><br><br>
+					<span class="right"><i>Berkeley, CA, USA</i></span><br><br>
 						Relevant Coursework:<br>
 						</p><ul style="list-style:circle;">
-									<li>Fundamentals of Computer Programming</li>
-									<li>Object-Oriented Programming</li>
-									<li>Principles of Software Development</li>
-									<li>Discrete Methods in Computer Science</li> 
-									<li>Design and Analysis of Algorithms</li>
-									<li>Design for User Experience</li>
-									<li>Basic Organization of Computer Systems</li>
-									<li>Human Language and Technology</li>
-									<li>Mobile Application Development</li>
-									<li>Design and Construction of Large Software Systems</li>
-									<li>Operating Systems</li>
-									<li>File and Database Management</li>
-									<li>Advanced Web Technologies</li>
-									<li>Advanced Topics in Mobile App Development</li>
-									<li>3D Design and Prototyping</li>
+									<li>Optimization Analysis</li>
+									<li>Risk Modeling, Simulation, and Data Analysis</li>
+									<li>Statistical Learning Theory</li>
+									<li>Data-X</li> 
+									<li>Modern Optimization for Statistical Learning</li>
+									<li>Research and Desigh Technology Management</li>
+									<li>Project Management and Teaming</li>
+									<li>Organizational Behavior for Engineers</li>
+									<li>Communications for Engineering Leaders</li>
+									<li>Accounting and Finance for Engineers</li>
+									<li>Marketing and Product Management</li>
+									<li>Entrepreneurship for Engineers</li>
 								</ul>
-					<span class="skill">C/C++</span><span class="skill">Java</span><span class="skill">Objective-C</span><span class="skill">Python</span><span class="skill">Git</span>
+					<span class="skill">Python</span><span class="skill">SQL</span><span class="skill">Spark</span><span class="skill">Tensorflow</span><span class="skill">Git</span>
 				<p></p>
 				<br>
-				<!-- Résumé : Education : Sorbonne -->
+				<!-- Résumé : Education : Zhejiang -->
 				<p>
-					<a target="_blank" href="http://www.english.paris-sorbonne.fr/%E2%80%8E"><img class="icon" src="./Tu Ni_files/sorbonne.png"></a><b>Paris Sorbonne University</b>
-					<span class="right"><i>Spring 2013</i></span><br>
-					<b>Study Abroad</b>
-					<span class="right"><i>Paris, FR</i></span><br><br>
-					Spent a semester studing art history, French, fashion and interior design in the 6th arrondissement of Paris. Additional recreational coursework
-					in French cooking, wine tasting, and cheese pairing.<br><br>
-					<span class="skill">Français</span><span class="skill">Airbnb-ing</span><span class="skill">L'art du pique-nique</span>
-				</p>
+					<a target="_blank" href="http://www.zju.edu.cn/"><img class="icon" src="./Tu Ni_files/zju.png"></a><b>Zhejiang University</b>
+					<span class="right"><i>2012 - 2016</i></span><br><b>Mathematics, B.S.</b>
+					<span class="right"><i>Hangzhou, Zhejiang, China</i></span><br><br>
+						Relevant Coursework:<br>
+						</p><ul style="list-style:circle;">
+									<li>Optimization Analysis</li>
+									<li>Risk Modeling, Simulation, and Data Analysis</li>
+									<li>Statistical Learning Theory</li>
+									<li>Data-X</li> 
+									<li>Modern Optimization for Statistical Learning</li>
+									<li>Research and Desigh Technology Management</li>
+									<li>Project Management and Teaming</li>
+									<li>Organizational Behavior for Engineers</li>
+									<li>Communications for Engineering Leaders</li>
+									<li>Accounting and Finance for Engineers</li>
+									<li>Marketing and Product Management</li>
+									<li>Entrepreneurship for Engineers</li>
+								</ul>
+					<span class="skill">MATLAB</span><span class="skill">R</span><span class="skill">C</span><span class="skill">Maple</span><span class="skill">Microsoft Office</span>
+				<p></p>
 				<br>
-				<!-- Résumé : Education : Freestyle -->
-				<p>
-					<a target="_blank" href="http://www.freestyle.mvla.net/%E2%80%8E"><img class="icon" src="./Tu Ni_files/fcat.png"></a><b>Freestyle Academy of Communication Arts &amp; Technology</b>
-					<span class="right"><i>2008-2010</i></span><br>
-					<b>Web and Audio Engineering</b>
-					<span class="right"><i>Mountain View, CA</i></span><br><br>
-					Attended a special academy with an interdisciplinary curriculum in graphic design, digital photography, and creative writing. Specialized
-					in web and audio engineering.<br><br>
-					<span class="skill">HTML</span><span class="skill">CSS</span><span class="skill">JS</span><span class="skill design">Photoshop</span><span class="skill design">Illustrator</span><span class="skill design">InDesign</span><span class="skill design">AfterEffects</span><span class="skill design">Flash</span><span class="skill">ActionScript</span><span class="skill">Reason</span><span class="skill">ProTools</span>
-				</p>
-				<br><br>
 
-				<!-- Résumé : Work Experience -->
-				<p class="section-tagline" style="text-align:left;">Work Experience</p>
-
-				<!-- Résumé : Work Experience : IDEO -->
-				<p>
-					<a target="_blank" href="http://www.ideo.com/"><img class="icon" src="./Tu Ni_files/ideo-3.png"></a><b>IDEO</b>
-					<span class="right"><i>Summer 2013</i></span><br>
-					<b>Digital Shop Intern</b>
-					<span class="right"><i>Palo Alto, CA</i></span><br><br>
-						Joined a team of product and software engineers within IDEO to 
-					design, prototype, build and ship digital products. Worked as both a designer and developer on a variety of internal and client projects.<br><br>
-					<span class="skill">HTML</span><span class="skill">SASS/CSS</span><span class="skill">CoffeeScript/JS</span><span class="skill">PHP</span><span class="skill">WordPress</span><span class="skill">Git</span><span class="skill design">Illustrator</span><span class="skill design">Photoshop</span>
-				</p>
-				<br>
-				<!-- Résumé : Work Experience : Roski -->
-				<p>
-					<a target="_blank" href="http://roski.usc.edu/"><img class="icon" src="./Tu Ni_files/roski.png"></a><b>USC Roski School of Fine Arts</b>
-					<span class="right"><i>2012 - 2013</i></span><br>
-					<b>Web Developer</b>
-					<span class="right"><i>Los Angeles, CA</i></span><br><br>
-						Responsible for maintaining the USC Roski School of Fine Arts website. Additionally worked on design and PHP/MySQL 
-						development for a new equipment rental web application used by all departments within the art school.<br><br>
-					<span class="skill">HTML</span><span class="skill">CSS</span><span class="skill">PHP</span><span class="skill">MySQL</span><span class="skill">Bootstrap</span>
-				</p>
-				<br>
-				<!-- Résumé : Work Experience : Intuit -->
-				<p>
-					<a target="_blank" href="http://www.intuit.com/"><img class="icon" src="./Tu Ni_files/intuit.png"></a><b>Intuit</b>
-					<span class="right"><i>Summer 2012</i></span><br>
-					<b>Experience Design Intern</b>
-					<span class="right"><i>San Diego, CA</i></span><br><br>
-						Working directly with designers, engineers, user researchers, and product managers to create, maintain, and transition the ofﬁcial 
-						prototype for the new TurboTax 'Finish and File' experience into the real code base for TurboTax Online.<br><br>
-					<span class="skill">HTML</span><span class="skill">CSS</span><span class="skill">JS</span><span class="skill design">Photoshop</span>
-				</p>
-				<br>
-				<!-- Résumé : Work Experience : Tricky Software -->
-				<p>
-					<a target="_blank" href="http://www.trickysoftware.com/"><img class="icon" src="./Tu Ni_files/tricky.png"></a><b>Tricky Software</b>
-					<span class="right"><i>Summer 2011</i></span><br>
-					<b>Software Engineering Intern</b>
-					<span class="right"><i>Menlo Park, CA</i></span><br><br>
-						Experience designing and programming mobile games and applications for the iPhone and iPad. Worked on front-end for 
-						Emma the Inventor and UI for Crayola Color Studio, and company website.<br><br>
-					<span class="skill">HTML</span><span class="skill">CSS</span><span class="skill">PHP</span><span class="skill">Objective-C</span>
-					<span class="skill design">Illustrator</span>
-				</p>
-				<br>
 				<!-- Résumé : Work Experience : UpTrending -->
 				<p>
 					<a target="_blank" href="http://www.uptrending.com/"><img class="icon" src="./Tu Ni_files/uptrending.png"></a><b>UpTrending, LLC</b>
@@ -184,7 +134,7 @@
 						Media campaigns, working directly with clients to build lasting online identities.<br><br>
 					<span class="skill">HTML</span><span class="skill">CSS</span><span class="skill">JS</span><span class="skill">WordPress</span><span class="skill design">Photoshop</span><span class="skill design">Illustrator</span>
 				</p>
-				<br><br><br><br>
+				<br>
 			</div></div>
 			<!-- Portfolio -->
 			<div id="work"><div class="inner">
