--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div id="illustration"><center><img src="./Tu Ni_files/big.png"></center></div>
 			<!-- About Me -->
 			<div id="about"><div class="inner">
-				<p>Hello, world! I'm an engineer in data science.</p><br><br><br>
+				<p>Hello, world! I'm an engineer in operations research.</p><br><br><br>
 				<!-- Console -->
 					<div id="code">
 						<div id="console">
@@ -123,25 +123,14 @@
 					<span class="skill">MATLAB</span><span class="skill">R</span><span class="skill">C</span><span class="skill">Maple</span><span class="skill">Microsoft Office</span>
 				<p></p>
 				<br>
-
-				<!-- Résumé : Work Experience : UpTrending -->
-				<p>
-					<a target="_blank" href="http://www.uptrending.com/"><img class="icon" src="./Tu Ni_files/uptrending.png"></a><b>UpTrending, LLC</b>
-					<span class="right"><i>Summer 2011</i></span><br>
-					<b>Web Designer and Developer</b>
-					<span class="right"><i>Palo Alto, CA</i></span><br><br>
-						Designing websites with a business minded approach and programming in front-end. Additional experience in SEO and Social 
-						Media campaigns, working directly with clients to build lasting online identities.<br><br>
-					<span class="skill">HTML</span><span class="skill">CSS</span><span class="skill">JS</span><span class="skill">WordPress</span><span class="skill design">Photoshop</span><span class="skill design">Illustrator</span>
-				</p>
 				<br>
 			</div></div>
 			<!-- Portfolio -->
-			<div id="work"><div class="inner">
-				<p class="tagline">Work + Fun</p>
+			<div id="work & projects"><div class="inner">
+				<p class="tagline">Work + Projects</p>
 		
 				<div class="portfolio-thumb portfolio-big">
-					<a class="image-popup-no-margins" href="./Tu Ni_files/happen.png"><img src="./Tu Ni_files/happen.png"></a>
+					<a class="image-popup-no-margins" href="./Tu Ni_files/patent.jpg"><img src="./Tu Ni_files/patent.jpg"></a>
 					<p class="description"><b>Happen</b>&nbsp;&nbsp; A group project for our senior software design capstone class inspired by our collective frustration with current social media’s focus on making our backlogs public. We want to create a tool for people to make plans for the future with all interactions between users kept private. This will be a simple planning platform where users can keep a list of things they want to do and friends can ambiently express their interest by swiping “me too.” We expect further communication to take place outside the app and are interested in the simplicity of its humble feature set, and its potential to encourage offline communication and activity. Working as a designer and developer. Currently in development. 
 
 </p>
