--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		
 				<div class="portfolio-thumb portfolio-big">
 					<a class="image-popup-no-margins" href="./Tu Ni_files/patent.jpg"><img src="./Tu Ni_files/patent.jpg"></a>
-					<p class="description"><b>Happen</b>&nbsp;&nbsp; A group project for our senior software design capstone class inspired by our collective frustration with current social media’s focus on making our backlogs public. We want to create a tool for people to make plans for the future with all interactions between users kept private. This will be a simple planning platform where users can keep a list of things they want to do and friends can ambiently express their interest by swiping “me too.” We expect further communication to take place outside the app and are interested in the simplicity of its humble feature set, and its potential to encourage offline communication and activity. Working as a designer and developer. Currently in development. 
+					<p class="description"><b>Machine Learning for Patent Similarity Analysis</b>&nbsp;&nbsp; Firms spend millions of dollars on patent litigation, blocking, and invalidation. This is in large part due to their inability find all the patents similar to theirs. We are applying state-of-the-art natural language processing techniques to automatically find similar patents. Our models use large neural networks and vast amounts of text to learn the contextual information in documents, and thus accurately classify similar patents. 
 
 </p>
 				</div>
