--- a/index.html
+++ b/index.html
@@ -128,17 +128,11 @@
 			<!-- Portfolio -->
 			<div id="work & projects"><div class="inner">
 				<p class="tagline">Work + Projects</p>
-		
-				<div class="portfolio-thumb portfolio-big">
-					<a class="image-popup-no-margins" href="./Tu Ni_files/patent.jpg"><img src="./Tu Ni_files/patent.jpg"></a>
-					<p class="description"><b>Machine Learning for Patent Similarity Analysis</b>&nbsp;&nbsp; Firms spend millions of dollars on patent litigation, blocking, and invalidation. This is in large part due to their inability find all the patents similar to theirs. We are applying state-of-the-art natural language processing techniques to automatically find similar patents. Our models use large neural networks and vast amounts of text to learn the contextual information in documents, and thus accurately classify similar patents. 
-
-</p>
-				</div>
+ 
 				<div class="row">
 					<div class="portfolio-thumb">
-						<a class="image-popup-no-margins" href="./Tu Ni_files/bike2.png"><img src="./Tu Ni_files/bike2.png"></a>
-						<p class="description"><b>Illustrations</b>&nbsp;&nbsp; I like to draw things I like. My Schwinn ride pictured above.</p>
+						<a class="image-popup-no-margins" href="./Tu Ni_files/patent.jpg"><img src="./Tu Ni_files/patent.jpg"></a>
+						<p class="description"><b>Machine Learning for Patent Similarity Analysis</b>&nbsp;&nbsp; A group capstone project for Master program. Basically, firms spend millions of dollars on patent litigation, blocking, and invalidation. This is in large part due to their inability find all the patents similar to theirs. We are applying state-of-the-art natural language processing techniques to automatically find similar patents. Our models use large neural networks and vast amounts of text to learn the contextual information in documents, and thus accurately classify similar patents. 
 					</div>
 					<div class="portfolio-thumb">
 						<a class="image-popup-no-margins" href="./Tu Ni_files/labs2.png"><img src="./Tu Ni_files/labs2.png"></a>
