--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 	<body>
 		<!-- Navigation -->
 		<div id="toc-holder" class="toc-holder">
-			<a href="http://kalynnakano.com/#" class="toc-link" id="toc-link"><span>☰</span></a>
+			<a href="http://nitu0317.github.io/#" class="toc-link" id="toc-link"><span>☰</span></a>
 			<ul id="toc" class="toc toc-up" style="top: -310px;">
 				<li class="toc-h1"><a href="http://kalynnakano.com/#about">About</a></li>
 				<li class="toc-h1"><a href="http://kalynnakano.com/#resume">Résumé</a></li>
-				<li class="toc-h1"><a href="http://kalynnakano.com/#work">Work</a></li>
+				<li class="toc-h1"><a href="http://kalynnakano.com/#work">Work and Projects</a></li>
 			</ul>
 		</div>
 
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 			<!-- Essentials Illustration -->
-			<div id="illustration"><center><img src="./Tu Ni_files/big.png"></center></div>
+			<div id="illustration"><center><img src="./Tu Ni_files/math.jpg"></center></div>
 			<!-- About Me -->
 			<div id="about"><div class="inner">
 				<p>Hello, world! I'm an engineer in operations research.</p><br><br><br>
@@ -61,12 +61,8 @@
 							<span class="answer">&nbsp;&nbsp;=&gt; ["Math", "Coding", "Sports", "Tea", "Music", "Environment", "Calligraphy"]<br><br></span>
 							&gt; Tu.resume<br>
 							<span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="https://github.com/nitu0317/resume/blob/master/NI_TU_Resume_Apr.pdf">Ni_Tu.pdf</a>"<br><br></span>
-							&gt; Tu.social_media<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; ["<a target="_blank" href="http://www.twitter.com/kalynnakano">@kalynnakano</a>",
-								 "<a target="_blank" href="http://advancedsettings.tumblr.com/">advancedsettings.tumblr.com</a>",
-								 "<a target="_blank" href="http://www.rdio.com/people/knakano/playlists/7112262/My_Brain/">rdio</a>"]<br><br></span>
 							&gt; Tu.email<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="nitu@berkeley.edu">nitu@berkeley.edu</a>"<br><br></span>
+							<span class="answer">&nbsp;&nbsp;=&gt; ["<a target="_blank" href="nitu@berkeley.edu">nitu@berkeley.edu</a>", "<a target="_blank" href="150687657@qq.com">150687657@qq.com</a>"]<br><br></span>
 						</div>
 					</div>
 				</div>
@@ -132,11 +128,12 @@
 				<div class="row">
 					<div class="portfolio-thumb">
 						<a class="image-popup-no-margins" href="./Tu Ni_files/patent.jpg"><img src="./Tu Ni_files/patent.jpg"></a>
-						<p class="description"><b>Machine Learning for Patent Similarity Analysis</b>&nbsp;&nbsp; A group capstone project for Master program. Basically, firms spend millions of dollars on patent litigation, blocking, and invalidation. This is in large part due to their inability find all the patents similar to theirs. We are applying state-of-the-art natural language processing techniques to automatically find similar patents. Our models use large neural networks and vast amounts of text to learn the contextual information in documents, and thus accurately classify similar patents. 
+						<p class="description"><b>Machine Learning for Patent Similarity Analysis</b>&nbsp;&nbsp; 
+						Capstone project for Master program: Basically, firms spend millions of dollars on patent litigation, blocking, and invalidation. This is in large part due to their inability find all the patents similar to theirs. We are applying state-of-the-art natural language processing techniques to automatically find similar patents. Our models use large neural networks and vast amounts of text to learn the contextual information in documents, and thus accurately classify similar patents. 
 					</div>
 					<div class="portfolio-thumb">
-						<a class="image-popup-no-margins" href="./Tu Ni_files/labs2.png"><img src="./Tu Ni_files/labs2.png"></a>
-						<p class="description"><b>IDEO Labs</b>&nbsp;&nbsp; Worked on front-end development of a wordpress theme designed for the new <a target="_blank" href="http://labs.ideo.com/">IDEO Labs site</a>.</p>
+						<a class="image-popup-no-margins" href="./Tu Ni_files/code.jpg"><img src="./Tu Ni_files/code.jpg"></a>
+						<p class="description"><b>Deep Neural Code Completion</b>&nbsp;&nbsp; Research project in Berkeley Artificial Intelligene Lab: Code completion, an essential part of modern software development, yet can be challenging for dynamically typed programming languages. I explore the use of neural network techniques to automatically learn code completion from a large corpus of dynamically typed JavaScript code. Different neural networks including WaveNet, Pointer Mixture Model and Doubly RNN have been exploited to leverage not only token level information but also structural information.</p>
 					</div>
 				</div>						
 				<div class="row">
