--- a/index.html
+++ b/index.html
@@ -52,10 +52,14 @@
 					<div id="code">
 						<div id="console">
 							&gt; Tu.origin<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; "Berkeley, CA"<br><br></span>
-							&gt; Tu.education<br>
-							<span class="answer">&nbsp;&nbsp;=&gt; "University of California, Berkeley"<br><br></span>
-							&gt; Tu.major<br>
+							<span class="answer">&nbsp;&nbsp;=&gt; "Hangzhou, China"<br><br></span>
+							&gt; Tu.education.undergraduate<br>
+							<span class="answer">&nbsp;&nbsp;=&gt; "Zhejiang University, China"<br><br></span>
+							&gt; Tu.education.graduate<br>
+							<span class="answer">&nbsp;&nbsp;=&gt; "University of California, Berkeley, USA"<br><br></span>
+							&gt; Tu.major.undergraduate<br>
+							<span class="answer">&nbsp;&nbsp;=&gt; "Bachelor of Science in Mathematics"<br><br></span>
+							&gt; Tu.major.graduate<br>
 							<span class="answer">&nbsp;&nbsp;=&gt; "Master of Engineering in Operations Research"<br><br></span>
 							&gt; Tu.interests<br>
 							<span class="answer">&nbsp;&nbsp;=&gt; ["Math", "Coding", "Sports", "Tea", "Music", "Environment", "Calligraphy"]<br><br></span>
@@ -103,18 +107,20 @@
 					<span class="right"><i>Hangzhou, Zhejiang, China</i></span><br><br>
 						Relevant Coursework:<br>
 						</p><ul style="list-style:circle;">
-									<li>Optimization Analysis</li>
-									<li>Risk Modeling, Simulation, and Data Analysis</li>
-									<li>Statistical Learning Theory</li>
-									<li>Data-X</li> 
-									<li>Modern Optimization for Statistical Learning</li>
-									<li>Research and Desigh Technology Management</li>
-									<li>Project Management and Teaming</li>
-									<li>Organizational Behavior for Engineers</li>
-									<li>Communications for Engineering Leaders</li>
-									<li>Accounting and Finance for Engineers</li>
-									<li>Marketing and Product Management</li>
-									<li>Entrepreneurship for Engineers</li>
+									<li>Calculus</li>
+									<li>Real Analysis</li>
+									<li>Complex Analysis</li>
+									<li>Functional Analysis</li>
+									<li>Linear Algebra</li>
+									<li>Abstract Algebra</li> 
+									<li>Combinatorial Optimization</li>
+									<li>Discrete Math</li>
+									<li>Data Structure</li>
+									<li>Geometry</li>
+									<li>Probability</li>
+									<li>Multi-Varibale Statistics</li>
+									<li>Time Series Analysis</li>
+									<li>Stochastic Process</li>
 								</ul>
 					<span class="skill">MATLAB</span><span class="skill">R</span><span class="skill">C</span><span class="skill">Maple</span><span class="skill">Microsoft Office</span>
 				<p></p>
@@ -162,11 +168,11 @@
 				</div>
 			</div></div>
 			<div id="footer"><div class="inner">
-				© 2013 Tu Ni. 
+				© Credit to Kalyn Nakano. 
 				<span class="right">
-					<a target="_blank" href="mailto:kalyn.nakano@gmail.com">Email</a>&nbsp;//&nbsp;
-					<a target="_blank" href="http://www.linkedin.com/pub/kalyn-nakano/33/344/376/">LinkedIn</a>&nbsp;//&nbsp;
-					<a target="_blank" href="http://www.twitter.com/kalynnakano">Twitter</a>
+					<a target="_blank" href="mailto:nitu@berkeley.edu">Email</a>&nbsp;//&nbsp;
+					<a target="_blank" href="https://www.linkedin.com/in/tu-ni-a97485123/">LinkedIn</a>&nbsp;//&nbsp;
+					<a target="_blank" href="https://www.facebook.com/profile.php?id=100011095838385">Facebook</a>
 				</span>
 			</div></div>
 		<script src="./Tu Ni_files/jquery.min.js"></script>
