--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
 			<div id="illustration"><center><img src="./Tu Ni_files/math.jpg"></center></div>
 			<!-- About Me -->
 			<div id="about"><div class="inner">
-				<p>Hello, world! I'm an engineer in operations research.</p><br><br><br>
+				<p>Hello, world! I'm an engineer in operations research and computer science.</p><br><br><br>
 				<!-- Console -->
 					<div id="code">
 						<div id="console">
 							&gt; Tu.origin<br>
 							<span class="answer">&nbsp;&nbsp;=&gt; "Hangzhou, China"<br><br></span>
+							&gt; Tu.birthday<br>
+							<span class="answer">&nbsp;&nbsp;=&gt; "March 17th, 1994"<br><br></span>
 							&gt; Tu.education.undergraduate<br>
 							<span class="answer">&nbsp;&nbsp;=&gt; "Zhejiang University, China"<br><br></span>
 							&gt; Tu.education.graduate<br>
@@ -145,25 +147,24 @@
 				<div class="row">
 					<div class="portfolio-thumb">
 						<a class="image-popup-no-margins" href="./Tu Ni_files/apollo2.png"><img src="./Tu Ni_files/apollo2.png"></a>
-						<p class="description"><b>Apollo</b>&nbsp;&nbsp; An internal summer intern project at IDEO. Apollo is
-						 a searchable community of people tagged with rich psychographic data, curated to provide resolution and reach to companies looking
-						 for research candidates.
+						<p class="description"><b>Convert Forest Fire Waste to On Demand Energy</b>&nbsp;&nbsp; Research Project 
 						</p>
 					</div>
 					<div class="portfolio-thumb">
-						<a class="image-popup-no-margins" href="./Tu Ni_files/xx_03.png"><img src="./Tu Ni_files/xx_03.png"></a>
-						<p class="description"><b>Music Visualizer</b>&nbsp;&nbsp; Experimental summer
-						project using WebGL and Three.js with a beat detection algorithm to make an interactive 3D music visualization of album artwork using orbit controls. Play <a target="_blank" href="http://kalynnakano.com/visualizer/xx.html">here</a>.</p>
+						<a class="image-popup-no-margins" href="./Tu Ni_files/cnn.png"><img src="./Tu Ni_files/cnn.png"></a>
+						<p class="description"><b>Deep Content Music Recommendation</b>&nbsp;&nbsp;
+						</p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="portfolio-thumb">
-						<a class="popup-vimeo" href="http://vimeo.com/41632558"><img src="./Tu Ni_files/cube2.png"></a>
-						<p class="description"><b>LED Cube</b>&nbsp;&nbsp; Built with a friend as a final project for USC EE 201: Introduction to Digital Circuits. Constructed an 8x8x8 LED Cube three-dimensional display. Designed and wired the driver circuit board. Wrote application modules in Verilog to navigate the cube. </p>
+						<a class="image-popup-no-margins" href="./Tu Ni_files/waste.jpg"><img src="./Tu Ni_files/waste.jpg"></a>
+						<p class="description"><b>New Supervision System of Waste Sorting</b>&nbsp;&nbsp;
+						</p>
 					</div>
 					<div class="portfolio-thumb">
-						<a class="image-popup-no-margins" href="./Tu Ni_files/homefit.png"><img src="./Tu Ni_files/homefit.png"></a>
-						<p class="description"><b>Homefit</b>&nbsp;&nbsp; Working with Executive Director of Digital Innovation at USC Viterbi School of Engineering, Ashish Soni, to research, conceptualize, wireframe, and design a new online tool for people looking to buy a home. </p></div>
+						<a class="image-popup-no-margins" href="./Tu Ni_files/ocean.png"><img src="./Tu Ni_files/ocean.png"></a>
+						<p class="description"><b>Optimization for Inversion of Mapping Tidal Current Structures</b>&nbsp;&nbsp; </p></div>
 					</div>
 				</div>
 			</div></div>
